add embedding code to testing file

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,22 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "id": "c4d5e9f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
+    "#!pip install tables\n",
+    "#!pip install fastparquet\n",
+    "from fastparquet import write\n",
     "\n",
+    "from tables import *\n",
     "import openai  # for generating embeddings\n",
     "import pandas as pd  # for DataFrames to store article sections and embeddings\n",
     "import re  # for cutting <ref> links out of Wikipedia articles\n",
-    "import tiktoken  # for counting tokens"
+    "import tiktoken  # for counting tokens\n",
+    "import numpy as np\n",
+    "from dotenv import dotenv_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 236,
+   "id": "486c3cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#To use embeddings you must create an .env file where the content is OPENAI_API_KEY = \"your-api-key\"\n",
+    "config = dotenv_values(\".env\")[\"OPENAI_API_KEY\"]\n",
+    "openai.organization = \"org-3O7bHGD9SwjHVDuUCNCGACC3\"\n",
+    "openai.api_key = config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ded640a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
    "id": "a94e28f8",
    "metadata": {},
    "outputs": [],
@@ -27,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 238,
    "id": "d3f06730",
    "metadata": {},
    "outputs": [
@@ -171,7 +198,7 @@
        "[32789 rows x 4 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 239,
    "id": "b59c6b2d",
    "metadata": {
     "scrolled": true
@@ -194,7 +221,7 @@
        "'§\\xa01.\\nVabariigi Valitsuse pädevus\\n(1) Vabariigi Valitsus teostab täidesaatvat riigivõimu Eesti Vabariigi põhiseaduse ja seaduste alusel.\\n(2) Vabariigi Valitsus teostab täidesaatvat riigivõimu vahetult või valitsusasutuste kaudu.\\n'"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 240,
    "id": "aeadfa64",
    "metadata": {},
    "outputs": [],
@@ -216,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 241,
    "id": "11322de5",
    "metadata": {},
    "outputs": [],
@@ -226,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 242,
    "id": "40b7b139",
    "metadata": {},
    "outputs": [],
@@ -237,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 243,
    "id": "4677c87d",
    "metadata": {
     "scrolled": true
@@ -251,7 +278,7 @@
        " ' Vabariigi Valitsus teostab täidesaatvat riigivõimu vahetult või valitsusasutuste kaudu.,']"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 244,
    "id": "e62e576a",
    "metadata": {
     "scrolled": true
@@ -274,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 245,
    "id": "6c09a091",
    "metadata": {},
    "outputs": [],
@@ -284,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 246,
    "id": "8e8f02f3",
    "metadata": {},
    "outputs": [],
@@ -296,229 +323,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "94365ac3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>nr</th>\n",
-       "      <th>text</th>\n",
-       "      <th>link</th>\n",
-       "      <th>title</th>\n",
-       "      <th>split_text</th>\n",
-       "      <th>word_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4917</th>\n",
-       "      <td>TuMS</td>\n",
-       "      <td>para13</td>\n",
-       "      <td>(1) Tulumaksuga maksustatakse kõik töö eest sa...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/TuMS#para13</td>\n",
-       "      <td>Palgatulu</td>\n",
-       "      <td>Tulumaksuga ei maksustata:,1) ametnikule, töö...</td>\n",
-       "      <td>1059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16672</th>\n",
-       "      <td>MSOS</td>\n",
-       "      <td>para2</td>\n",
-       "      <td>Käesoleva seaduse tähenduses on:,1) veesõiduk ...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/MSOS#para2</td>\n",
-       "      <td>Mõisted</td>\n",
-       "      <td>Käesoleva seaduse tähenduses on:,1) veesõiduk ...</td>\n",
-       "      <td>1436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17195</th>\n",
-       "      <td>MKS</td>\n",
-       "      <td>para29</td>\n",
-       "      <td>[RT I, 23.03.2017, 1 - jõust. 01.04.2017],Maks...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/MKS#para29</td>\n",
-       "      <td>Maksusaladust sisaldava teabe avaldamine</td>\n",
-       "      <td>[RT I, 23.03.2017, 1 - jõust. 01.04.2017],Maks...</td>\n",
-       "      <td>1840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18195</th>\n",
-       "      <td>LS</td>\n",
-       "      <td>para2</td>\n",
-       "      <td>Käesoleva seaduse tähenduses:,1) anda teed (mi...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/LS#para2</td>\n",
-       "      <td>Mõisted</td>\n",
-       "      <td>Käesoleva seaduse tähenduses:,1) anda teed (mi...</td>\n",
-       "      <td>2651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23996</th>\n",
-       "      <td>KeTS</td>\n",
-       "      <td>para55b1</td>\n",
-       "      <td>(1) Maavara kaevandamisõiguse tasust kantakse:...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/KeTS#para55b1</td>\n",
-       "      <td>Laekunud keskkonnatasude jaotumine riigieelarv...</td>\n",
-       "      <td>Maavara kaevandamisõiguse tasust kantakse:,1)...</td>\n",
-       "      <td>1450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28406</th>\n",
-       "      <td>ESS</td>\n",
-       "      <td>para2</td>\n",
-       "      <td>Käesolevas seaduses kasutatakse mõisteid järgm...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/ESS#para2</td>\n",
-       "      <td>Mõisted</td>\n",
-       "      <td>Käesolevas seaduses kasutatakse mõisteid järgm...</td>\n",
-       "      <td>2317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29055</th>\n",
-       "      <td>EnKS</td>\n",
-       "      <td>para2</td>\n",
-       "      <td>Käesolevas seaduses kasutatakse termineid järg...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/EnKS#para2</td>\n",
-       "      <td>Terminid</td>\n",
-       "      <td>Käesolevas seaduses kasutatakse termineid järg...</td>\n",
-       "      <td>1040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29333</th>\n",
-       "      <td>ELTS</td>\n",
-       "      <td>para3</td>\n",
-       "      <td>[RT I, 28.06.2012, 1 - jõust. 08.07.2012],Käes...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/ELTS#para3</td>\n",
-       "      <td>Terminid</td>\n",
-       "      <td>[RT I, 28.06.2012, 1 - jõust. 08.07.2012],Käes...</td>\n",
-       "      <td>1690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30955</th>\n",
-       "      <td>ATKEAS</td>\n",
-       "      <td>para24</td>\n",
-       "      <td>(1) Maksukohustus tekib aktsiisikauba tarbimis...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/ATKEAS#para24</td>\n",
-       "      <td>Maksukohustuse tekkimine</td>\n",
-       "      <td>Käesoleva paragrahvi lõigetes 5–5.2 nimetatud...</td>\n",
-       "      <td>1096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30958</th>\n",
-       "      <td>ATKEAS</td>\n",
-       "      <td>para27</td>\n",
-       "      <td>(1) Aktsiisist on vabastatud:,1) välisriigi di...</td>\n",
-       "      <td>https://www.riigiteataja.ee/akt/ATKEAS#para27</td>\n",
-       "      <td>Aktsiisivabastus</td>\n",
-       "      <td>Aktsiisist on vabastatud:,1) välisriigi diplo...</td>\n",
-       "      <td>1093</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         type        nr                                               text  \\\n",
-       "4917     TuMS    para13  (1) Tulumaksuga maksustatakse kõik töö eest sa...   \n",
-       "16672    MSOS     para2  Käesoleva seaduse tähenduses on:,1) veesõiduk ...   \n",
-       "17195     MKS    para29  [RT I, 23.03.2017, 1 - jõust. 01.04.2017],Maks...   \n",
-       "18195      LS     para2  Käesoleva seaduse tähenduses:,1) anda teed (mi...   \n",
-       "23996    KeTS  para55b1  (1) Maavara kaevandamisõiguse tasust kantakse:...   \n",
-       "28406     ESS     para2  Käesolevas seaduses kasutatakse mõisteid järgm...   \n",
-       "29055    EnKS     para2  Käesolevas seaduses kasutatakse termineid järg...   \n",
-       "29333    ELTS     para3  [RT I, 28.06.2012, 1 - jõust. 08.07.2012],Käes...   \n",
-       "30955  ATKEAS    para24  (1) Maksukohustus tekib aktsiisikauba tarbimis...   \n",
-       "30958  ATKEAS    para27  (1) Aktsiisist on vabastatud:,1) välisriigi di...   \n",
-       "\n",
-       "                                                link  \\\n",
-       "4917     https://www.riigiteataja.ee/akt/TuMS#para13   \n",
-       "16672     https://www.riigiteataja.ee/akt/MSOS#para2   \n",
-       "17195     https://www.riigiteataja.ee/akt/MKS#para29   \n",
-       "18195       https://www.riigiteataja.ee/akt/LS#para2   \n",
-       "23996  https://www.riigiteataja.ee/akt/KeTS#para55b1   \n",
-       "28406      https://www.riigiteataja.ee/akt/ESS#para2   \n",
-       "29055     https://www.riigiteataja.ee/akt/EnKS#para2   \n",
-       "29333     https://www.riigiteataja.ee/akt/ELTS#para3   \n",
-       "30955  https://www.riigiteataja.ee/akt/ATKEAS#para24   \n",
-       "30958  https://www.riigiteataja.ee/akt/ATKEAS#para27   \n",
-       "\n",
-       "                                                   title  \\\n",
-       "4917                                           Palgatulu   \n",
-       "16672                                            Mõisted   \n",
-       "17195           Maksusaladust sisaldava teabe avaldamine   \n",
-       "18195                                            Mõisted   \n",
-       "23996  Laekunud keskkonnatasude jaotumine riigieelarv...   \n",
-       "28406                                            Mõisted   \n",
-       "29055                                           Terminid   \n",
-       "29333                                           Terminid   \n",
-       "30955                           Maksukohustuse tekkimine   \n",
-       "30958                                   Aktsiisivabastus   \n",
-       "\n",
-       "                                              split_text  word_count  \n",
-       "4917    Tulumaksuga ei maksustata:,1) ametnikule, töö...        1059  \n",
-       "16672  Käesoleva seaduse tähenduses on:,1) veesõiduk ...        1436  \n",
-       "17195  [RT I, 23.03.2017, 1 - jõust. 01.04.2017],Maks...        1840  \n",
-       "18195  Käesoleva seaduse tähenduses:,1) anda teed (mi...        2651  \n",
-       "23996   Maavara kaevandamisõiguse tasust kantakse:,1)...        1450  \n",
-       "28406  Käesolevas seaduses kasutatakse mõisteid järgm...        2317  \n",
-       "29055  Käesolevas seaduses kasutatakse termineid järg...        1040  \n",
-       "29333  [RT I, 28.06.2012, 1 - jõust. 08.07.2012],Käes...        1690  \n",
-       "30955   Käesoleva paragrahvi lõigetes 5–5.2 nimetatud...        1096  \n",
-       "30958   Aktsiisist on vabastatud:,1) välisriigi diplo...        1093  "
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df[\"word_count\"]>1000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 247,
    "id": "928781a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GPT_MODEL = \"gpt-3.5-turbo\"  # only matters insofar as it selects which tokenizer to use\n"
+    "df_cut = df[[\"type\",\"nr\",\"link\",\"title\",\"split_text\"]]\n",
+    "GPT_MODEL = \"gpt-3.5-turbo\"  # only matters insofar as it selects which tokenizer to use\n",
+    "EMBEDDING_MODEL = \"text-embedding-ada-002\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "9108e98e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\annilo\\AppData\\Local\\Temp\\ipykernel_16368\\1343037904.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df[\"concatenated\"] = df[\"concatenated\"].str.replace(r'\\s+', ' ').str.rstrip(\",\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"concatenated\"] = df[\"title\"]+ \" \"+ df[\"split_text\"]\n",
+    "df[\"concatenated\"] = df[\"concatenated\"].str.replace(r'\\s+', ' ').str.rstrip(\",\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "48e3b9c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_less= df[df[\"word_count\"]<500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "0b062103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laws = np.array(df_less[\"concatenated\"])\n",
+    "#laws = laws[:10000]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9108e98e",
+   "id": "d870fc21",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9afc302f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# calculate embeddings\n",
+    "\n",
+    "##\n",
+    "##DO NOT RUN UNLESS NEED TO CREATE NEW EMBEDDINGS (THIS CODE COSTS ABT 2 DOLLARS)\n",
+    "\n",
+    "#EMBEDDING_MODEL = \"text-embedding-ada-002\"  # OpenAI's best embeddings as of Apr 2023\n",
+    "#BATCH_SIZE = 1000  # you can submit up to 2048 embedding inputs per request\n",
+    "#\n",
+    "#wikipedia_strings = laws.tolist()\n",
+    "#\n",
+    "#embeddings = []\n",
+    "#for batch_start in range(0, len(wikipedia_strings), BATCH_SIZE):\n",
+    "#    batch_end = batch_start + BATCH_SIZE\n",
+    "#    batch = wikipedia_strings[batch_start:batch_end]\n",
+    "#    print(f\"Batch {batch_start} to {batch_end-1}\")\n",
+    "#    response = openai.Embedding.create(model=EMBEDDING_MODEL, input=batch)\n",
+    "#    for i, be in enumerate(response[\"data\"]):\n",
+    "#        assert i == be[\"index\"]  # double check embeddings are in same order as input\n",
+    "#    batch_embeddings = [e[\"embedding\"] for e in response[\"data\"]]\n",
+    "#    embeddings.extend(batch_embeddings)\n",
+    "#\n",
+    "#df = pd.DataFrame({\"text\": wikipedia_strings, \"embedding\": embeddings})"
+   ]
   },
   {
    "cell_type": "code",
@@ -526,28 +413,58 @@
    "id": "7f479eb1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df['text'] = df['text'].astype('str')\n",
+    "#df['embedding'] = df['embedding'].astype('str')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "19d9f77d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#otherwise loading is super slow\n",
+    "#df.to_hdf(r'embeddedfile_2.h5', key='stage', mode='w')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ff6683ef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#reread = pd.read_hdf('./embeddedfile.h5')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b944f97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reread = reread[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7688e753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reread.to_csv(\"sample_embeddings.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0ce6c7",
+   "id": "e25178f7",
    "metadata": {},
    "outputs": [],
    "source": []
