--- a/xmlparser.ipynb
+++ b/xmlparser.ipynb
@@ -260,8 +260,8 @@
     "    xml = re.sub(tag('i'), '', xml)\n",
     "    xml = re.sub(tag('/i'), '', xml)\n",
     "\n",
-    "    # replace <sup> with underscore and remove </sup> tags\n",
-    "    xml = re.sub(tag('sup'), '_', xml)\n",
+    "    # replace <sup> with ^ and remove </sup> tags\n",
+    "    xml = re.sub(tag('sup'), '^', xml)\n",
     "    xml = re.sub(tag('/sup'), '', xml)\n",
     "\n",
     "    # remove <reavahetus/>\n",
