--- a/xmlparser.ipynb
+++ b/xmlparser.ipynb
@@ -235,20 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xmltodict\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import xmltodict\n",
+    "import re\n",
+    "\n",
     "def xml_preprocess(xml):\n",
     "    tag = lambda tag: fr'<({tag}[^>]*)>'\n",
     "    # replace <viide> with <tavatekst> to preserve order as it's used for links in text\n",
@@ -274,21 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_dict['oigusakt']['metaandmed']['lyhend']\n",
-    "# data_dict['oigusakt']['metaandmed']['kehtivus']['kehtivuseAlgus']\n",
-    "# data_dict['oigusakt']['aktinimi']['nimi']['pealkiri']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# xml parsing helper functions\n",
+    "\n",
     "from collections import namedtuple\n",
     "\n",
     "def get_list(d, key):\n",
@@ -337,6 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use chatgpt3.5 to parse in-text refs\n",
+    "\n",
     "import openai\n",
     "from dotenv import dotenv_values\n",
     "\n",
@@ -375,6 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# data structures to hold parsed xml data\n",
+    "\n",
     "from __future__ import annotations\n",
     "from dataclasses import dataclass, field\n",
     "from collections import namedtuple\n",
@@ -531,6 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# xml parsing functions\n",
+    "\n",
     "def parse_points(points, parent: Element):\n",
     "    for point in points:\n",
     "        numbering = get_numbering(point, 'alampunktNr', points)\n",
@@ -620,11 +610,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "371"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
     "from collections.abc import Iterable\n",
     "def flatten(xs):\n",
     "    # from https://stackoverflow.com/a/2158532\n",
@@ -633,20 +633,17 @@
     "            yield from flatten(x)\n",
     "        else:\n",
     "            yield x[0]\n",
-    "# makes data structures from a law document\n",
-    "# import pandas as pd\n",
-    "# df2 = pd.DataFrame(columns=['law', 'paragraph', 'subparagraphs', 'points', 'text'])\n",
     "\n",
     "documents = {}\n",
     "for idx, row in df.iterrows():\n",
-    "    # if row['title'] == 'Eesti Vabariigi põhiseadus': # test with põhiseadus\n",
     "    # print('--------------------------------------')\n",
     "    # print(row['title'])\n",
     "    doc = Document(text=row['title'])\n",
     "    documents[row['title']] = doc\n",
     "    get_next(xml_preprocess(row['xml'])['oigusakt']['sisu'], doc)\n",
     "    # doc_text = doc.get_text(2048)\n",
-    "    #print('\\n'.join(list(flatten(doc_text))))"
+    "    #print('\\n'.join(list(flatten(doc_text))))\n",
+    "len(documents)"
    ]
   },
   {
@@ -654,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### let chatgpt parse in-text references"
+    "### chatgpt parse text references test"
    ]
   },
   {
@@ -674,7 +671,6 @@
     }
    ],
    "source": [
-    "len(documents)\n",
     "documents[list(documents.keys())[0]]"
    ]
   },
