--- a/xmlparser.ipynb
+++ b/xmlparser.ipynb
@@ -643,7 +643,8 @@
     "    get_next(xml_preprocess(row['xml'])['oigusakt']['sisu'], doc)\n",
     "    # doc_text = doc.get_text(2048)\n",
     "    #print('\\n'.join(list(flatten(doc_text))))\n",
-    "len(documents)"
+    "len(documents)\n",
+    "# there's at least one law that isn't properly parsed and some have bad xml formatting, but it should get every paragraph"
    ]
   },
   {
