--- a/xmlparser.ipynb
+++ b/xmlparser.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
     "from collections import namedtuple\n",
     "\n",
     "\n",
-    "TEXTREF = namedtuple('TextReference', ['text', 'reference'])\n",
+    "TEXTELEM = namedtuple('TextElem', ['text', 'elem'])\n",
     "\n",
     "def get_string_from_list(generator, sep=' '):\n",
     "    if generator is not None:\n",
@@ -457,12 +457,12 @@
     "        for child in self.children:\n",
     "            child_text = child.get_text()\n",
     "            if len(text) + len(child_text) > max_length:\n",
-    "                texts.append(TEXTREF(text.strip(), self))\n",
+    "                texts.append(TEXTELEM(text.strip(), self))\n",
     "                text = child_text\n",
     "            else:\n",
     "                text += f\" {child_text}\".strip()\n",
     "        if len(text) > 0 and len(text) > len(self.format_text()):\n",
-    "            texts.append(TEXTREF(text.strip(), self))\n",
+    "            texts.append(TEXTELEM(text.strip(), self))\n",
     "        return texts\n",
     "\n",
     "\n",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "371"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,10 +629,10 @@
     "def flatten(xs):\n",
     "    # from https://stackoverflow.com/a/2158532\n",
     "    for x in xs:\n",
-    "        if isinstance(x, Iterable) and not isinstance(x, (TEXTREF)):\n",
+    "        if isinstance(x, Iterable) and not isinstance(x, TEXTELEM):\n",
     "            yield from flatten(x)\n",
     "        else:\n",
-    "            yield x[0]\n",
+    "            yield x[0] # only print the text and not the element itself\n",
     "\n",
     "documents = {}\n",
     "for idx, row in df.iterrows():\n",
@@ -641,8 +641,12 @@
     "    doc = Document(text=row['title'])\n",
     "    documents[row['title']] = doc\n",
     "    get_next(xml_preprocess(row['xml'])['oigusakt']['sisu'], doc)\n",
+    "\n",
+    "    #### returns a list(TEXTELEM(text, elem))\n",
+    "    #### element might be useful later when trying to find all in-text references related to the paragraph\n",
     "    # doc_text = doc.get_text(2048)\n",
-    "    #print('\\n'.join(list(flatten(doc_text))))\n",
+    "    #### only print the text and not the element itself\n",
+    "    # print('\\n'.join(list(flatten(doc_text))))\n",
     "len(documents)\n",
     "# there's at least one law that isn't properly parsed and some have bad xml formatting, but it should get every paragraph"
    ]
