--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1cba82",
+   "id": "993f7a73",
    "metadata": {},
    "source": [
     "A little section about what embeddings are."
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1419ca8",
+   "id": "fecbf883",
    "metadata": {},
    "source": [
     "A section about the data. Selle võib ka tõsta üldisemaks."
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2919ed15",
+   "id": "2aaef481",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1ba155ce",
+   "id": "e68ce452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "67016cab",
+   "id": "8db5bbb4",
    "metadata": {
     "scrolled": true
    },
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d8e72322",
+   "id": "a4b23e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "79b2b764",
+   "id": "b8870b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f88e54fa",
+   "id": "b1eb4bbc",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "669f548a",
    "metadata": {},
    "outputs": [],
@@ -1439,12 +1439,12 @@
     "    \"\"\"Return a message for GPT, with relevant source texts pulled from a dataframe.\"\"\"\n",
     "    strings, relatednesses = strings_ranked_by_relatedness_vector(query, index,df)\n",
     "    introduction = 'Use the following part of the law to answer the subsequent question. Try to find the best answer.' \\\n",
-    "    'Formulate the answer including the full law name, not shortened and paragraph'\\\n",
-    "    'If the answer cannot be found in the laws, write \"Ma ei leidnud seadustest vastust\"'\n",
+    "    'Formulate the answer including the law name and paragraph number'\\\n",
+    "    'The answer should be a coherent sentence. If the answer cannot be found in the laws, write \"Ma ei leidnud seadustest vastust\"'\n",
     "    question = f\"\\n\\nQuestion: {query}\"\n",
     "    message = introduction\n",
     "    for string in strings:\n",
-    "        next_article = f'\\n\\nSeadusest:\\n\"\"\"\\n{string}\\n\"\"\"'\n",
+    "        next_article = f'\\n\\n\"\"\"\\n{string}\\n\"\"\"'\n",
     "        if (\n",
     "            num_tokens(message + next_article + question, model=model)\n",
     "            > token_budget\n",
@@ -1481,17 +1481,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "92a144de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Seadusest \"Seadus VVS paragrahv 6. Pealkiri: Vabariigi Valitsuse ja ministri ametisse astumine Sisu: Vabariigi Valitsus või minister astub ametisse ametivande andmisega Riigikogu ees.\"'"
+       "'Seadus VVS paragrahv 6 kohaselt astub Vabariigi Valitsus või minister ametisse ametivande andmisega Riigikogu ees.'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46e9a786",
+   "id": "590d92c8",
    "metadata": {},
    "outputs": [],
    "source": []
